Run CI under JDK 20