@@ -27,8 +27,15 @@ apply plugin: 'com.github.johnrengelman.shadow'
 group 'org.checkerframework'
 version '3.33.0'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+// This test is for whether the Checker Framework supports (runs under) Java 8.
+// Currently, the Checker Framework does support Java 8.
+if (true /* supports Java 8 */) {
+  sourceCompatibility = 1.8
+  targetCompatibility = 1.8
+} else {
+  sourceCompatibility = 11
+  targetCompatibility = 11
+}
 
 repositories {
   mavenCentral()
@@ -67,16 +74,49 @@ dependencies {
 }
 
 compileJava {
-  sourceCompatibility = 1.8
-  targetCompatibility = 1.8
+  if (true /* supports Java 8 */) {
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
+  } else {
+    sourceCompatibility = 11
+    targetCompatibility = 11
+    options.compilerArgs += [
+      '--add-exports',
+      'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+      '--add-exports',
+      'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+      '--add-exports',
+      'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
+      '--add-exports',
+      'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+      '--add-exports',
+      'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+      '--add-exports',
+      'jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+      '--add-exports',
+      'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+      '--add-exports',
+      'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+      '--add-exports',
+      'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+    ]
+  }
   options.failOnError = true
   options.deprecation = true
-  options.compilerArgs += [
-    '-g',
-    '-Werror',
-    "-Xlint:unchecked",
-    "-Xlint",
-  ]
+  if (JavaVersion.current().compareTo(org.gradle.api.JavaVersion.VERSION_20) >= 0) {
+    // JDK 20 and later deprecate --target 8
+    options.compilerArgs += [
+      '-g',
+      '-Werror',
+      '-Xlint:all,-options',
+    ]
+  } else {
+    options.compilerArgs += [
+      '-g',
+      '-Werror',
+      '-Xlint',
+    ]
+  }
   options.encoding = 'UTF-8'
 
   options.errorprone.disable(
@@ -376,6 +416,34 @@ def createCheckTypeTask(checker, shortName) {
       "--add-opens",
       "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
     ]
+
+    if (true /* supports Java 8 */) {
+      sourceCompatibility = 1.8
+      targetCompatibility = 1.8
+    } else {
+      sourceCompatibility = 11
+      targetCompatibility = 11
+      options.compilerArgs += [
+        '--add-exports',
+        'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+        '--add-exports',
+        'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+        '--add-exports',
+        'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
+        '--add-exports',
+        'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+        '--add-exports',
+        'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+        '--add-exports',
+        'jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+        '--add-exports',
+        'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+        '--add-exports',
+        'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+        '--add-exports',
+        'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+      ]
+    }
   }
 }
 
@@ -404,7 +472,12 @@ test.dependsOn testAnnotator
 
 javadoc {
   options.memberLevel = JavadocMemberLevel.PUBLIC
-  options.addStringOption('source', '8')
+  if (true /* supports Java 8 */) {
+    options.addStringOption('source', '8')
+  } else {
+    options.addStringOption('source', '11')
+  }
+
   options.addStringOption('Xdoclint:all', '-quiet')
   options.addStringOption('Xmaxwarns', '10000')
   options.JFlags = [
@@ -463,9 +536,7 @@ task updateUserOptionsJavadoc(type: Javadoc, dependsOn: 'assemble') {
   options.addStringOption("docfile", "${projectDir}/src/annotator/Main.java")
   options.addStringOption("format", "javadoc")
   options.addStringOption("i", "-quiet")
-  if (JavaVersion.current().compareTo(org.gradle.api.JavaVersion.VERSION_1_9) >= 0) {
-    options.addStringOption('source', '8')
-  }
+  options.addStringOption('source', '8')
   options.noTimestamp(false)
   title = ""
 }
@@ -483,9 +554,7 @@ task updateUserOptionsHtml(type: Javadoc, dependsOn: 'assemble') {
   options.addStringOption("docfile", "${projectDir}/annotation-file-utilities.html")
   options.addStringOption("format", "html")
   options.addStringOption("i", "-quiet")
-  if (JavaVersion.current().compareTo(org.gradle.api.JavaVersion.VERSION_1_9) >= 0) {
-    options.addStringOption('source', '8')
-  }
+  options.addStringOption('source', '8')
   options.noTimestamp(false)
   title = ""
 }
